examples/fail/semantic/private_field_struct_lit.bina
// EXPECT_SEMANTIC_ERROR: private field initializer
struct Secret {
    pub visible: int32;
    hidden: int32;
}

fn main() -> int {
    let secret = Secret { visible: 1i32, hidden: 2i32 };
    return 0;
}
